--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "landing",
   "main": "index.html",
   "scripts": {
-    "scss:watch": "scss --style=expanded --watch styles:dist"
+    "sass:watch": "sass --style=expanded --watch styles:dist"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,6 @@
   "homepage": "https://github.com/AlexBarvinok/landing_liveStreaming#readme",
   "devDependencies": {
     "parcel": "^2.12.0",
-    "scss": "^0.2.4"
+    "sass": "^1.79.3"
   }
 }
