--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "maket3",
   "version": "1.0.0",
   "description": "landing",
-  "main": "index.html",
+  "source": "index.html",
   "scripts": {
-    "sass:watch": "sass --style=expanded --watch styles:dist"
+    "sass:watch": "sass --style=compressed  --watch styles:dist",
+    "parcel:watch": "parcel serve --dist-dir public",
+    "parcel:build": "parcel build --dist-dir build --public-url ./"
   },
   "repository": {
     "type": "git",
